--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,3 +1,12 @@
-<h1>HEY. I'm a bid HEADING</h1>
-<p>hey. im a paragraph element. cool huh<p>
-<a href="https://google.com" target="_blank" title="lets got to goole"> click me bitch! Im a link!</a>></a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head> 
+<body>
+    <h1>HEY. I'm a bid HEADING</h1>
+    <p>hey. im a <b>papragraph </b> element. cool huh<p>
+    <a href="https://google.com" target="_blank" title="lets got to goole"> click me bitch! Im a link!</a>></a>
+    <img src="https://vignette.wikia.nocookie.net/marvel_dc/images/e/e9/Nightwing_Vol_4_1_Textless_Variant.jpg/revision/latest?cb=20190227005841">
+    </body>
+</html>
